added contacts page and some fancitude to the travel app. Still has pics of toilets.

--- a/Rails/travel/app/views/welcome/about.html.erb
+++ b/Rails/travel/app/views/welcome/about.html.erb
@@ -10,3 +10,7 @@
     background: <%= @color %>;
   }
 </style>
+
+<%= link_to "Travel", root_path, class: "navbar-brand" %>
+
+<%= link_to "Blue", {controller: "welcome", action: "about", color: "blue"}, class: "btn btn-primary" %>
