--- a/Rails/travel/app/assets/stylesheets/application.css.erb
+++ b/Rails/travel/app/assets/stylesheets/application.css.erb
@@ -15,8 +15,16 @@
  */
 
 
-#toilet {
-  
-  width: 30%;
-  
+body {
+  background: url("/assets/bg.png") no-repeat;
+  background-size: cover;
+}
+
+.container {
+  background: rgba(255,255,255,0.8);
+}
+
+.navbar-default .navbar-brand {
+  font-family: Papyrus, 'Marck Script', cursive;
+  color: #000;
 }
