--- a/Rails/blogh/app/assets/stylesheets/application.css
+++ b/Rails/blogh/app/assets/stylesheets/application.css
@@ -13,3 +13,18 @@
  *= require_tree .
  *= require_self
  */
+
+.cant-see-me {
+  
+  display:none;
+}
+
+body {
+  background-image: url("http://photos-for-you.com/wp-content/uploads/2011/08/Sky-6-Sepia.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.panel{
+  opacity: 0.7;
+}
