--- a/Rails/blogh/app/assets/stylesheets/comments.scss
+++ b/Rails/blogh/app/assets/stylesheets/comments.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the Comments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.cant-see-me {
+  display:none;
+}
+
+body {
+  background-color: #fff363;
+}
+
+panel {
+  opacity: 0.7;
+}
+
