--- a/Rails/blogh/app/views/blog_posts/_form.html.erb
+++ b/Rails/blogh/app/views/blog_posts/_form.html.erb
@@ -11,17 +11,18 @@
     </div>
   <% end %>
 
+
+  
   <div class="field">
     <%= f.label :title %><br>
     <%= f.text_field :title %>
   </div>
   <div class="field">
-    <%= f.label :author %><br>
-    <%= f.text_field :author %>
-  </div>
-  <div class="field">
     <%= f.label :blog_entry %><br>
     <%= f.text_area :blog_entry %>
+  </div>
+    <div class="invisible">
+    <%= f.number_field :user_id, value: current_user.id %>
   </div>
   <div class="actions">
     <%= f.submit %>
